--- a/stlye.css
+++ b/stlye.css
@@ -57,10 +57,14 @@ Backgroun colors
  */
 .bg-color-purp{
     background-color: #b7a57a !important;
-    background-image: url("/images/RainAngle.SVG") !important;
     background-repeat: repeat;
     background-size: auto;
 }
+#navigation,.navbar .bg-color-purp .navbar-expand-lg .navbar-light{
+    background-image: url("images/RainAngle.svg") !important;
+    background-size: auto;
+    background-repeat: repeat;
+  }
 
 
 .paragraph{
