--- a/stlye.css
+++ b/stlye.css
@@ -115,6 +115,6 @@ iframe{
 #car-1 {
     background-color: #4b2e83 !important;
 }
-/* #car-2 {
-    
-} */
+#car-2 {
+    background-color: #b7a57a;
+}
